--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-  "homepage": "http://tatyana12.github.io/react",{
+{  
+"homepage": "http://tatyana12.github.io/react",
   "name": "react-coin",
   "version": "1.0.0",
   "private": true,
