--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-cli": "^6.26.0",
     "prop-types": "^15.6.0",
     "react-dom": "^16.2.0",
+      "react-scripts": "^2.1.1",
     "react-router-dom": "^4.2.2"
   },
   "scripts": {
