--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prop-types": "^15.6.0",
     "react-dom": "^16.2.0",
       "react-scripts": "^2.1.1",
+       "react": "^16.6.3",
     "react-router-dom": "^4.2.2"
   },
   "scripts": {
